# d-bot-m2m-task-executor

./: .gitignore  CMakeLists.txt  README.md  catkin_env.sh.sample  package.xml  setup.py  task_manager.launch
src/: integration_tests.py  task_manager.py  unit_tests.py
src/api/: task.py
src/db/: device_localization.py  localizationDAO.py  logger.py  postgres_connector.py
src/definitions/: etask.py  etask_priority.py
src/enum/: etask.py  etask_priority.py
src/localization/: localizer.py
src/resources/: .env.sample  config_loader.py
src/util/: priority_manager.py  priority_queue.py
srv/: AddTask.srv  Task.srv  TaskCall.srv
